Fix english free benefit and spacing

--- a/static/css/pages/premium.css
+++ b/static/css/pages/premium.css
@@ -610,6 +610,7 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  row-gap: 1em;
   align-items: flex-start;
   min-height: 120px;
 }
